--- a/Array.html
+++ b/Array.html
@@ -14,27 +14,27 @@
 
         friends.sort();
         document.write(friends);
-        document.write("<br>");
+        document.write("<br> <br>");
 
         friends.push("monu");
         document.write(friends);
-        document.write("<br>");
+        document.write("<br> <br>");
 
         friends.pop();
         document.write(friends);
-        document.write("<br>");
+        document.write("<br> <br>");
 
         friends.unshift("sonu");
         document.write(friends);
-        document.write("<br>");
+        document.write("<br> <br>");
 
         friends.shift();
         document.write(friends);
-        document.write("<br>");
+        document.write("<br> <br>");
 
         friends.reverse();
         document.write(friends);
-        document.write("<br>");
+        document.write("<br><br>");
 
 
     </script>
